--- a/static/js/repo/package.json
+++ b/static/js/repo/package.json
@@ -25,6 +25,7 @@
     "superagent": "^3.6.0",
     "superagent-csrf-middleware": "^0.3.0",
     "superagent-django-csrf": "^0.1.3",
+    "superagent-throttle": "^0.2.5",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1",
     "zepto-browserify": "^1.1.6-1"
