--- a/static/js/repo/package.json
+++ b/static/js/repo/package.json
@@ -14,9 +14,11 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "json-loader": "^0.5.7",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-dropzone": "^4.1.0",
+    "react-markdown": "^2.5.0",
     "react-redux": "^4.4.8",
     "redux": "^3.7.2",
     "redux-logger": "^2.6.1",
