--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ bleach
 cffi==1.9.1
 Django==1.11.2
 django-bootstrap3==8.2.3
+django-cleanup
 django-tinymce4-lite==1.4.1
 djangorestframework==3.6.3
 djangorestframework-jwt==1.11.0
+pillow
 pycparser==2.17
 pygit2==0.26.0
 pytz==2017.2
