--- a/static/js/menu/package.json
+++ b/static/js/menu/package.json
@@ -14,9 +14,15 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "query-string": "^5.0.0",
     "react": "^0.14.6",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^0.14.6",
+    "react-js-pagination": "^2.2.0",
     "react-redux": "^4.4.8",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-logger": "^2.6.1",
     "redux-promise-middleware": "^3.2.0",
