--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-filter==1.0.4
 django-tinymce4-lite==1.4.1
 djangorestframework==3.6.3
 djangorestframework-jwt==1.11.0
+flake8==3.4.1
 Pillow==4.2.1
 pycparser==2.17
 pygit2==0.26.0
